refactor: Rename project to NoteVerse Canvas
Update project name and related artifacts from "WikiVerse Canvas" to "NoteVerse Canvas". This includes package.json, HTML titles, metadata, local storage keys, download file prefixes, and default node titles. This aligns the project with its intended branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-wikiverse-canvas",
+  "name": "noteverse-canvas",
   "private": true,
   "version": "0.0.0",
   "type": "module",
